examples/k8s/yaml/textrepo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: textrepo-app
  name: textrepo-app
  namespace: textrepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: textrepo-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: textrepo-app
    spec:
      containers:
      - args:
        - /data/wait-for-it.sh
        - autocomplete-indexer:8080
        - --timeout=0
        - --
        - /data/wait-for-it.sh
        - full-text-indexer:8080
        - --timeout=0
        - --
        - /textrepo-app/start.sh
        image: knawhuc/textrepo-app:1.19.0
        name: gltr-textrepo
        ports:
        - containerPort: 8080
        - containerPort: 8081
        volumeMounts:
          - mountPath: /data
            name: wait-for-it
      restartPolicy: Always
      volumes:
        - name: wait-for-it
          configMap:
            name: wait-for-it
            defaultMode: 0755
