examples/k8s/yaml/autocomplete-indexer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autocomplete-indexer
  namespace: textrepo
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: autocomplete-indexer
