examples/k8s/yaml/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: textrepo
spec:
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  selector:
    app: elasticsearch
