examples/k8s/yaml/file-indexer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-indexer
  namespace: textrepo
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: file-indexer
