examples/k8s/yaml/full-text-indexer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: full-text-indexer
  namespace: textrepo
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: full-text-indexer
