examples/k8s/yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: textrepo
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: nginx
