examples/k8s/yaml/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: textrepo
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    app: postgres
