examples/k8s/yaml/textrepo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: textrepo-app
  namespace: textrepo
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    app: textrepo-app
